// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should export proper "angular" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "warn",
    "testing/library/no-dom-import": Array [
      "error",
      "angular",
    ],
  },
}
`;

exports[`should export proper "react" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "warn",
    "testing/library/no-dom-import": Array [
      "error",
      "react",
    ],
  },
}
`;

exports[`should export proper "recommended" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
  },
}
`;

exports[`should export proper "vue" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "warn",
    "testing/library/no-dom-import": Array [
      "error",
      "vue",
    ],
  },
}
`;
